# aProfiler

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
data/: test-TP53-aa.fasta
results/: test-TP53-aa_pca_embedding.csv  test-TP53-nt_aa_usage_from_codons.csv  test-TP53-nt_codon_global.csv  test-TP53-nt_codon_report.html  test-TP53-nt_codon_rscu.csv  test-TP53-nt_per_site_nt_metrics.csv  test-TP53-nt_report.html
results/test-TP53-aa/: test-TP53-aa_aa_report.html  test-TP53-aa_symfreq_global.csv  test-TP53-aa_umap_embedding.csv
results/test-TP53-nt/: test-TP53-nt_aa_essential_summary.csv  test-TP53-nt_codon_per_site.csv  test-TP53-nt_nucfreq_global.csv  test-TP53-nt_pca_embedding.csv  test-TP53-nt_umap_embedding.csv
scripts/: profA.py  profile.py  updatePackage.sh
src/AlignmentProfiler/: cli.py  codon.py  core.py  io.py  nucleotide.py  plots.py  protein.py  stats.py  utils.py
src/AlignmentProfiler/archive/: __init__.07152025.py  alignmentprofiler copy.py  alignmentprofiler.py
src/aProfiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aprofiler/: __init__.py  cli.py  profiler.py
tests/: test_aa_profile.py  test_codon_profile.py  test_nt_profile.py  test_package.py
tests/data/: toy_aa.fasta  toy_codon.fasta  toy_nt.fasta
