[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aProfiler"
version = "0.1.0"
description = "aProfiler — Signal in. Insight out. Catchy MSA stats + viz in your CLI."
readme = "README.md"
requires-python = ">=3.8"

# -------------------------------------------------------------------
# 🔧 ALL DEPENDENCIES GET INSTALLED HERE
# -------------------------------------------------------------------
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",          # optional styling for future plots
  "biopython",        # FASTA parsing, MSA handling
  "scipy",            # clustering, entropy, distance metrics
  "scikit-learn",     # PCA/UMAP embeddings if needed
  "plotnine",         # grammar-of-graphics plotting alternative
  "tqdm",             # progress bars for large MSAs
  "logomaker",        # sequence logo visualization
  "umap-learn",       # dimensionality reduction visuals
]

[project.scripts]
aprofiler = "aprofiler.cli:main"
