[build-system]
requires = ["setuptools>=64", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "aprofiler"
version = "0.1.1"
description = "aProfiler: MSA Statistics & Visualization Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Alexander G. Lucaci" }
]

keywords = [
  "bioinformatics",
  "multiple sequence alignment",
  "MSA",
  "evolution",
  "codon",
  "sequence analysis",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "biopython",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "plotnine",
  "logomaker",
  "umap-learn",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
aprofiler = "aprofiler.cli:main"

[project.urls]
Homepage = "https://github.com/aglucaci/aProfiler"
Repository = "https://github.com/aglucaci/aProfiler.git"
Issues = "https://github.com/aglucaci/aProfiler/issues"
